orders, cart, seller and buyer statistics, all is implemented